crates/gridwell-writer-latex/tests/snapshots/snapshots__borders-solid.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{lll}
\toprule
A & B & C \\
\midrule
1 & 2 & 3 \\
4 & 5 & 6 \\
\bottomrule
\end{tabular}
