crates/gridwell-writer-latex/tests/snapshots/snapshots__colspan-basic.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{lrr}
\toprule
 & \multicolumn{2}{c}{Scores} \\
Name & Q1 & Q2 \\
\midrule
Alice & 90 & 95 \\
Bob & 85 & 88 \\
\bottomrule
\end{tabular}
