crates/gridwell-writer-latex/tests/snapshots/snapshots__colspan-full-width.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{lll}
\toprule
\multicolumn{3}{c}{Full-width spanner} \\
A & B & C \\
\midrule
1 & 2 & 3 \\
\bottomrule
\end{tabular}
