crates/gridwell-writer-latex/tests/snapshots/snapshots__column-widths-mixed.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{p{90pt}p{0.25\linewidth}ll}
\toprule
Fixed & Percent & Fraction & Auto \\
\midrule
120px & 25\% & 1fr & auto \\
\bottomrule
\end{tabular}
