crates/gridwell-writer-latex/tests/snapshots/snapshots__conditional-striping.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Index & Value \\
\midrule
\cellcolor[HTML]{ECF0F1}0 & \cellcolor[HTML]{ECF0F1}a \\
1 & b \\
\cellcolor[HTML]{ECF0F1}2 & \cellcolor[HTML]{ECF0F1}c \\
3 & d \\
\bottomrule
\end{tabular}
