crates/gridwell-writer-latex/tests/snapshots/snapshots__decimal-char-align.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Item & Amount \\
\midrule
A & 1234.5 \\
B & 6.789 \\
C & 42.0 \\
\bottomrule
\end{tabular}
