crates/gridwell-writer-latex/tests/snapshots/snapshots__financial-report.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
{\large\bfseries Quarterly P\&L}\\
\begin{tabular}{lrr}
\toprule
Line item & Q1 & Q2 \\
\midrule
Revenue & \$1,200 & \$1,350 \\
COGS & \cellcolor[HTML]{F9F9F9}\$700 & \cellcolor[HTML]{F9F9F9}\$760 \\
Opex & \$300 & \$320 \\
\cmidrule(lr){1-3}
\cellcolor[HTML]{F5F5F5}\textbf{Net income} & \cellcolor[HTML]{F5F5F5}\textbf{\$200} & \cellcolor[HTML]{F5F5F5}\textbf{\$270} \\
\bottomrule
\end{tabular}

{\footnotesize Unaudited management figures.}\\
